[package]
name = "railwind_cli"
version = "0.1.2"
authors = ["pintariching"]
license = "MIT"
description = "CLI tool for the Railwind compiler"
readme = "../README.md"
homepage = "https://github.com/pintariching/railwind"
repository = "https://github.com/pintariching/railwind"
keywords = ["tailwind", "css", "compiler", "cli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = { version = "0.8.0" }
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.1.6", features = ["derive"] }
globwalk = "0.8.1"
railwind = { version = "0.1.5", path = "../railwind" }
notify = "6.1.1"
anyhow = "1.0.75"
itertools = "0.11.0"

[[bin]]
name = "railwind"
path = "src/main.rs"